--- a/Web Content/index.html
+++ b/Web Content/index.html
@@ -22,17 +22,17 @@
 <body>
     <div >
         <div class="center" id="main-container">
-            <div>
+            <div id="image">
                 <span id="image">  
-                    <img alt="" src="images/drawers.jpg">
+                    <img src="images/drawers.jpg">
                 </span>
             </div>
             <div id="second-container">
-                <h1>
-                    Shift the overall look and feel by <br>
-                    adding these wonderful touches to <br>
-                    furniture in your home
-                </h1>
+                <h3>
+                    Shift the overall look and feel by
+                    adding these wonderful 
+                    touches to furniture in your home
+                </h3>
                 <p>
                     Ever been in a room and felt like something was missing? <br>
                     Perhaps it felt slightly bare and uninviting. I’ve got some <br>
@@ -40,10 +40,10 @@
                 </p> 
                 <div id="third-container">  
                     <span id="span-img">
-                        <img alt="michelle-profile-picture" id="avatar" src="images/avatar-michelle.jpg">
+                        <img id="avatar" src="images/avatar-michelle.jpg">
                     </span>
                     <span id="small-container">
-                        <h4>Michelle Appleton</h4>
+                        <h5>Michelle Appleton</h5>
                         <p>28 Jun 2020</p>
                     </span>
                     <!--Social links and share-->
